[package]
name = "mediator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
futures = "0.3.17"
mediator_macros = { path = "./mediator_macros" }


[features]
return_position_impl_trait_in_trait = []
